--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -10,7 +10,7 @@ description: "The concept of equality is a central point of debate and inquiry i
 
 The concept of equality is a central point of debate and inquiry in philosophy and mathematics, with far-reaching implications for matters of ethics, justice, and public policy.
 
-From an empiricist perspective of the universe, two objects are equal if they are indistinguishable from one another in measured observations. On a human scale, egalitarians hold that individuals should be considered equal members of the societal, economic, political, and judicial they inhabit.
+From an empiricist perspective of the universe, two objects are equal if they are indistinguishable from one another in measurable observations. On a human scale, egalitarians hold that individuals should be considered equal members of the societal, economic, political, and judicial systems they inhabit.
 
 It is the task of programmers to reconcile our logical and physical understanding of equality with the semantic domains we model. There is a subtlety to the question of equality, too often overlooked. Jumping into implementation without sufficient understanding of semantics can lead to unnecessary work that produces incorrect results. Though an understanding of the mathematical and logical system underpinning is equally essential to making things work as modeled.
 
