--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -192,7 +192,7 @@ Bringing it all together, here's how one might override the default equality imp
     return YES;
   }
 
-  if (![[Person class] isKindOfClass:[object class]]) {
+  if (![object isKindOfClass:[Person class]]) {
     return NO;
   }
 
