Fixed typo in UIColor category

--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -152,7 +152,7 @@ For a `UIColor`, a bit-shifted sum of RGB components is a convenient calculation
 @implementation UIColor (Approximate)
 - (NSUInteger)hash {
   CGFloat red, green, blue;
-  [color getRed:&red green:&green blue:&blue alpha:nil];
+  [self getRed:&red green:&green blue:&blue alpha:nil];
   return ((NSUInteger)(red * 255) << 16) + ((NSUInteger)(green * 255) << 8) + (NSUInteger)(blue * 255);
 }
 @end
