Fixing typo (/thanks @algal)

--- a/2013-08-26-equality.md
+++ b/2013-08-26-equality.md
@@ -123,7 +123,7 @@ Now for a quick flashback to Computer Science 101:
 
 ---
 
-A [hash table](http://en.wikipedia.org/wiki/Hash_table) is a fundamental data structure in programming, and its what enables `NSSet` & `NSDictionary` to have fast (`O(1)`) lookup of elements.
+A [hash table](http://en.wikipedia.org/wiki/Hash_table) is a fundamental data structure in programming, and it's what enables `NSSet` & `NSDictionary` to have fast (`O(1)`) lookup of elements.
 
 We can best understand hash tables by contrasting them to arrays: 
 
