Did I seriously just get spell-checked on Loripsum text?

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -21,7 +21,7 @@ For the longest time, this boringly essential function was completely MIA, leavi
 But no longer! iOS 7 finally bakes-in Base64:
 
 ~~~{objective-c}
-NSString *string = @"Lorem ipsum dolar sit amet.";
+NSString *string = @"Lorem ipsum dolor sit amet.";
 NSString *base64EncodedString = [[string dataUsingEncoding:NSUTF8StringEncoding] base64EncodedStringWithOptions:0];
 
 NSLog(@"%@", base64EncodedString); // @"TG9yZW0gaXBzdW0gZG9sYXIgc2l0IGFtZXQu"
