Removing NSCalendar additions, as they're not available in iOS, but rather Mac OS X Mavericks

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -8,7 +8,7 @@ description: "With the NDA finally lifted, we can finally talk about all of the 
 
 With the NDA finally lifted, we can finally talk about all of the amazing new APIs in iOS 7. And there are a _lot_ of them. "1500 new APIs", by Apple's count during the WWDC Keynote. (Granted, a good portion of that could just be all of the changes from `id` to `instancetype`, but that's a huge number, regardless).
 
-We'll be going over many of the new features iOS 7 in depth over the coming weeks, but with all of the excitement around this major release, this week's issue will hit on some of the gems hiding in plain sight: `NSData` Base64 encoding, `NSURLComponents`, `NSProgress`, `NSProcessInfo` activities, `NSCalendar` additions, `CIDetectorSmile`, `CIDetectorEyeBlink`, `SSReadingList`, `AVCaptureMetaDataOutput`, `AVSpeechSynthesizer`, and `MKDistanceFormatter`.
+We'll be going over many of the new features iOS 7 in depth over the coming weeks, but with all of the excitement around this major release, this week's issue will hit on some of the gems hiding in plain sight: `NSData` Base64 encoding, `NSURLComponents`, `NSProgress`, `NSProcessInfo` activities, `CIDetectorSmile`, `CIDetectorEyeBlink`, `SSReadingList`, `AVCaptureMetaDataOutput`, `AVSpeechSynthesizer`, and `MKDistanceFormatter`.
 
 ---
 
@@ -84,18 +84,6 @@ progress.cancellationHandler = ^{
 ~~~
 
 `NSProgress` makes a lot more sense in the context of Mac OS X 10.9 Mavericks, but for now, it remains a useful class for encapsulating the shared patterns of work units.
-
-## NSCalendar Additions
-
-NSHipster has frequently gushed about how great Cocoa date & time calculation APIs are. iOS 7 makes them _even better_ by adding a couple of useful methods:
-
-~~~{objective-c}
-BOOL isToday = [calendar isDateInToday:date];
-BOOL isWeekend = [calendar isDateInWeekend:date];
-BOOL isSameMonth = [calendar isDate:date1
-                        equalToDate:date2
-                  toUnitGranularity:NSCalendarUnitMonth];
-~~~
 
 ## NSArray -firstObject
 
