Fixed smile detectiopn example

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -113,12 +113,12 @@ In yet another free app idea, here's a snippet that might be used by a camera th
 ~~~
 
 ~~~{objective-c}
-CIDetector *smileDetector = [CIDetector detectorOfType:CIDetectorSmile 
+CIDetector *smileDetector = [CIDetector detectorOfType:CIDetectorTypeFace
                                 context:context 
                                 options:@{CIDetectorTracking: @YES, 
                                           CIDetectorAccuracy: CIDetectorAccuracyLow}];
-NSArray *features = [smileDetector featuresInImage:image];
-if ([features count] > 0) {
+NSArray *features = [smileDetector featuresInImage:image options:@{CIDetectorSmile:@YES}];
+if (([features count] > 0) && (((CIFaceFeature *)features[0]).hasSmile)) {
     UIImageWriteToSavedPhotosAlbum(image, self, @selector(didFinishWritingImage), features);
 } else {
     self.label.text = @"Say Cheese!"
