Fixing AVCaptureSession code sample

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -138,7 +138,7 @@ AVCaptureSession *session = [[AVCaptureSession alloc] init];
 AVCaptureDevice *device = [AVCaptureDevice defaultDeviceWithMediaType:AVMediaTypeVideo];
 NSError *error = nil;
 
-AVCaptureDeviceInput *input = [AVCaptureDeviceInput deviceInputWithDevice:device 
+AVCaptureDeviceInput *input = [AVCaptureDeviceInput deviceInputWithDevice:device
                                                                     error:&error];
 if (input) {
     [session addInput:input];
@@ -147,6 +147,7 @@ if (input) {
 }
 
 AVCaptureMetadataOutput *output = [[AVCaptureMetadataOutput alloc] init];
+[output setMetadataObjectTypes:@[AVMetadataObjectTypeQRCode]];
 [output setMetadataObjectsDelegate:self queue:dispatch_get_main_queue()];
 [session addOutput:output];
 
