Fixing table markup

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -183,20 +183,17 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 <tr><td></td></tr>
 <tr><td><q>Request rejected or failed by the server.</q></td></tr>
 
-
 <tr><td rowspan="3">111</td><td><tt>kCFSOCKS4ErrorIdentdFailed</tt></td></tr>
 <tr><td></td></tr>
 <tr><td><q>Request rejected because SOCKS server cannot connect to identd on the client.</q></td></tr>
-
 
 <tr><td rowspan="3">112</td><td><tt>kCFSOCKS4ErrorIdConflict</tt></td></tr>
 <tr><td></td></tr>
 <tr><td><q>Request rejected because the client program and identd report different user-ids.</q></td></tr>
 
-
 <tr><td rowspan="3">113</td><td><tt>kCFSOCKS4ErrorUnknownStatusCode</tt></td></tr>
 <tr><td></td></tr>
-<tr><td></td><q>The status code returned by the server is unknown.</q></tr>
+<tr><td></td><q>The status code returned by the server is unknown.</q></td></tr>
 
 
 <tr><th colspan="2">SOCKS5 Errors</th></tr>
