Check for success rather than error /cc @tonyarnold

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -97,10 +97,10 @@ As a consumer, you are primarily concerned with methods that have a final parame
 
 ~~~{objective-c}
 NSError *error = nil;
-[[NSFileManager defaultManager] moveItemAtPath:@"/path/to/target"
-                                        toPath:@"/path/to/destination"
-                                         error:&error];
-if (error) {
+BOOL success = [[NSFileManager defaultManager] moveItemAtPath:@"/path/to/target"
+                                                       toPath:@"/path/to/destination"
+                                                        error:&error];
+if (!success) {
     NSLog(@"%@", error);
 }
 ~~~
