Adding contrastive example for domains /cc @boredzo

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -28,7 +28,7 @@ Each `NSError` object encodes three critical pieces of information: a status `co
 
 Like exit status codes, an `NSError -code` signals the nature of the problem. These status codes are defined within a particular error `domain`, in order to avoid overlap and confusion. These status codes are generally defined by constants in an `enum`.
 
-For example, in the `NSCocoaErrorDomain`, the status code for an error caused by `NSFileManager` attempting to access a non-existant file is `4`, as defined by `NSFileNoSuchFileError`.
+For example, in the `NSCocoaErrorDomain`, the status code for an error caused by `NSFileManager` attempting to access a non-existant file is `4`, as defined by `NSFileNoSuchFileError`. However, `4` in `NSPOSIXErrorDomain` refers to a [POSIX `EINTR`, or "interupted function" error](http://250bpm.com/blog:12).
 
 Now, anyone coming from a systems programming background may have just had a vision of a `switch` statement with smatterings of `printf` to translate numeric constants into something human-readable. `NSError` is way ahead of you.  
 
