--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -38,15 +38,15 @@ What gives `NSError` its particular charm is everyone's favorite grab bag proper
 
 Three are generally useful:
 
-> – `localizedDescription` (`NSLocalizedDescriptionKey`): A localized description of the error.
-> – `localizedRecoverySuggestion` (`NSLocalizedRecoverySuggestionErrorKey`): A localized recovery suggestion for the error.
-> – `localizedFailureReason` (`NSLocalizedFailureReasonErrorKey`): A localized explanation of the reason for the error.
+– `localizedDescription` (`NSLocalizedDescriptionKey`): A localized description of the error.
+– `localizedRecoverySuggestion` (`NSLocalizedRecoverySuggestionErrorKey`): A localized recovery suggestion for the error.
+– `localizedFailureReason` (`NSLocalizedFailureReasonErrorKey`): A localized explanation of the reason for the error.
 
 ...whereas three others are specific to OS X:
 
-> – `localizedRecoveryOptions` (`NSLocalizedRecoveryOptionsErrorKey`): An array containing the localized titles of buttons appropriate for displaying in an alert panel
-> - `recoveryAttempter` (`NSRecoveryAttempterErrorKey`)
-> - `helpAnchor` (`NSHelpAnchorErrorKey`): Used by an alert panel by a help anchor button.
+– `localizedRecoveryOptions` (`NSLocalizedRecoveryOptionsErrorKey`): An array containing the localized titles of buttons appropriate for displaying in an alert panel
+- `recoveryAttempter` (`NSRecoveryAttempterErrorKey`)
+- `helpAnchor` (`NSHelpAnchorErrorKey`): Used by an alert panel by a help anchor button.
 
 Here's how to construct `NSError` with a `userInfo` dictionary: 
 
