Wrapping error userInfo values in NSLocalizedString /thanks @boredzo

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -52,9 +52,9 @@ Here's how to construct `NSError` with a `userInfo` dictionary:
 
 ~~~{objective-c}
 NSDictionary *userInfo = @{
-  NSLocalizedDescriptionKey: @"Operation was unsuccessful.",
-  NSLocalizedFailureReasonErrorKey: @"The operation timed out.",
-  NSLocalizedRecoverySuggestionErrorKey: @"Have you tried turning it off and on again?"
+  NSLocalizedDescriptionKey: NSLocalizedString(@"Operation was unsuccessful.", nil),
+  NSLocalizedFailureReasonErrorKey: NSLocalizedString(@"The operation timed out.", nil),
+  NSLocalizedRecoverySuggestionErrorKey: NSLocalizedString(@"Have you tried turning it off and on again?", nil)
                           };
 NSError *error = [NSError errorWithDomain:NSHipsterErrorDomain 
                                      code:-57 
