Spelling /cc @uliwitness

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -73,7 +73,7 @@ For example, a controller that calls a method that populates an `NSError **` (as
                   otherButtonTitles:nil, nil] show];
 ~~~
 
-> As a brief nonsequitor: one clever hack used by C functions to communicate errors is to [encode 4-letter ASCII sequences in the 32 bit return type](https://github.com/mattt/Xcode-Snippets/blob/master/checkerror.m). It's no `localizedDescription`, but it's better than cross-referencing error codes from a table every time!
+> As a brief non-sequitur: one clever hack used by C functions to communicate errors is to [encode 4-letter ASCII sequences in the 32 bit return type](https://github.com/mattt/Xcode-Snippets/blob/master/checkerror.m). It's no `localizedDescription`, but it's better than cross-referencing error codes from a table every time!
 
 For sake of completeness: here is a list of the standard `NSError` `userInfo` keys:
 
