Balance open-closed tags

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -162,7 +162,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 
 <tr><td rowspan="3">1</td><td><tt>kCFHostErrorHostNotFound</tt></td>
 <tr><td></td></tr>
-<tr><td><q>Indicates that the DNS lookup failed.<q></td></tr>
+<tr><td><q>Indicates that the DNS lookup failed.</q></td></tr>
 
 <tr><td rowspan="3">2</td><td><tt>kCFHostErrorUnknown</tt></td></tr><tr><td></td></tr>
 <tr><td><q>An unknown error occurred (a name server failure, for example). For additional information, query the <tt>kCFGetAddrInfoFailureKey</tt> to get the value returned from <tt>getaddrinfo</tt>; lookup in <tt>netdb.h</tt></q></td></tr>
@@ -174,7 +174,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 
 <tr><td rowspan="3">101</td><td><tt>kCFSOCKSErrorUnsupportedServerVersion</tt></td></tr>
 <tr><td></td></tr>
-<tr><td><q>The version of SOCKS requested by the server is not supported. Query <tt>kCFSOCKSStatusCodeKey</tt> to recover the status code returned by the server.<br/>Query the <tt>kCFSOCKSVersionKey</tt> to find the version requested by the server.</q></td></td></tr>
+<tr><td><q>The version of SOCKS requested by the server is not supported. Query <tt>kCFSOCKSStatusCodeKey</tt> to recover the status code returned by the server.<br/>Query the <tt>kCFSOCKSVersionKey</tt> to find the version requested by the server.</q></td></tr>
 
 
 <tr><th colspan="2">SOCKS4 Error</th></tr>
@@ -193,7 +193,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 
 <tr><td rowspan="3">113</td><td><tt>kCFSOCKS4ErrorUnknownStatusCode</tt></td></tr>
 <tr><td></td></tr>
-<tr><td></td><q>The status code returned by the server is unknown.</q></td></tr>
+<tr><td><q>The status code returned by the server is unknown.</q></td></tr>
 
 
 <tr><th colspan="2">SOCKS5 Errors</th></tr>
@@ -250,7 +250,7 @@ As such, here is an exhaustive, well-formatted table at your disposal:
 
 <tr><td rowspan="3">305</td><td><tt>kCFErrorHTTPBadURL</tt></td></tr>
 <tr><td></td></tr>
-<tr><td><q>The requested URL could not be retrieved.</td></tr>
+<tr><td><q>The requested URL could not be retrieved.</q></td></tr>
 
 <tr><td rowspan="3">306</td><td><tt>kCFErrorHTTPProxyConnectionFailure</tt></td></tr>
 <tr><td></td></tr>
