Clarifying stance on Cocoa conventions of NSError **

--- a/2013-10-14-nserror.md
+++ b/2013-10-14-nserror.md
@@ -105,7 +105,7 @@ if (!success) {
 }
 ~~~
 
-> According to Cocoa conventions, _all_ methods returning `BOOL` to indicate success or failure are expected to have a final `NSError **` parameter.
+> According to Cocoa conventions, methods returning `BOOL` to indicate success or failure are encouraged to have a final `NSError **` parameter if there are multiple failure conditions to distinguish between. A good guideline is whether you could imagine that `NSError` bubbling up, and being presented to the user.
 
 Another way `NSError` objects are passed is the inclusion of an `NSError *` argument in `completionHandler` blocks. This gets around both a constraint on single value returns as well as one on that value being returned synchronously. This has become especially popular with newer Foundation APIs, like `NSURLSession`:
 
