Add notification handling to iCloud key-value storage notification

--- a/2013-04-01-icloud.md
+++ b/2013-04-01-icloud.md
@@ -54,6 +54,13 @@ didFinishLaunchingWithOptions:(NSDictionary *)launchOptions
 
   return YES;
 }
+
+- (void)ubiquitousKeyValueStoreDidChange:(NSNotification*)notification {
+
+    NSUbiquitousKeyValueStore *ubiquitousKeyValueStore = notification.object;
+    [ubiquitousKeyValueStore synchronize];
+}
+
 ~~~
 
 ## Document Storage... in the Cloud!
