--- a/2013-11-04-xctool.md
+++ b/2013-11-04-xctool.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: XCTool
+title: xctool
 ref: "https://github.com/facebook/xctool"
 framework: "Open Source"
 rating: 9.1
@@ -31,11 +31,11 @@ Rather than belabor the point by enumerating all of the flaws in this decade-old
 
 The first you'll notice about `xctool` is its gorgeous, colorized output.
 
-![XCTool in Action](http://nshipster.s3.amazonaws.com/xctool-example.gif)
+![xctool in Action](http://nshipster.s3.amazonaws.com/xctool-example.gif)
 
 As consumers of Apple hardware and software ourselves, the role of design cannot be under-stated. In this respect, `xctool` absolutely nails it. Every step of the build process is neatly organized and reported in a way that is understandable and visually appealing, with ANSI colorization and a splash of Unicode ornamentation.
 
-But XCTool's beauty is not just skin-deep: build progress can also be reported in formats that can be read by other tools:
+But xctool's beauty is not just skin-deep: build progress can also be reported in formats that can be read by other tools:
 
     xctool -reporter plain:output.txt build
 
@@ -52,7 +52,7 @@ But XCTool's beauty is not just skin-deep: build progress can also be reported i
 
 Another major improvement over `xcodebuild` is that `xctool` will run application tests in your project in the same way Xcode.app does (`xcodebuild` can't discern which targets in your scheme are test targets, let alone run them in the simulator)
 
-For this reason alone, XCTool has great implications for the emerging discipline of continuous integration testing within the Objective-C community.
+For this reason alone, xctool has great implications for the emerging discipline of continuous integration testing within the Objective-C community.
 
 ### Travis CI
 
@@ -86,4 +86,4 @@ Objective-C has and continues to undergo rapid growth based on the popularity of
 
 Are we clumsy amateurs, or do we take an active role in refining our craft?
 
-XCTool, like so many other tools from the community, provide hope and, indeed, inspiration about the future of the language and its ecosystem. Let's continue to build upon these tools, to create a developer experience that we can be proud of.
+xctool, like so many other tools from the community, provide hope and, indeed, inspiration about the future of the language and its ecosystem. Let's continue to build upon these tools, to create a developer experience that we can be proud of.
