Added mention of the C99 _Pragma operator, which can be used in macros

--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -12,6 +12,11 @@ description: "#pragma declarations are a mark of craftsmanship in Objective-C. A
 
 In this modern context, `#pragma` skirts the line between comment and code. As a preprocessor directive, `#pragma` evaluates at compile-time. But unlike other macros, such as `#ifdef...#endif`, the way `#pragma` is used will not change the runtime behavior of your application. Instead, `#pragma` declarations are used by Xcode to accomplish two primary tasks: organizing code and inhibiting compiler warnings.
 
+In addition to the `#pragma` syntax, both [GCC](http://gcc.gnu.org/onlinedocs/cpp/Pragmas.html) and [Clang](http://clang.llvm.org/docs/UsersManual.html#controlling-diagnostics-via-pragmas) have added the C99 `_Pragma` operator which can then be used in macros like this:
+
+	#define HELLO _Pragma("message \"Hello\"")
+	
+
 ## Organizing Your Code
 
 Code organization is a matter of hygiene. How you structure your code is a reflection on you and your work. A lack of convention and internal consistency indicates either carelessness or incompetence--and worse, makes a project difficult to maintain and collaborate on.
