Fixing markup errors

--- a/2013-05-06-gpuimage.md
+++ b/2013-05-06-gpuimage.md
@@ -27,7 +27,7 @@ When you write C or Objective-C code in Xcode, you're generating instructions th
 Comparing the performance of GPU-based rendering to CPU rendering for something like video, the differences are staggering:
 
 <table id="gpuimage-benchmarks">
-  <summary>CPU vs. GPU Frame-Rate (Larger FPS is Better)</summary>
+  <caption>CPU vs. GPU Frame-Rate (Larger FPS is Better)</caption>
   <thead>
     <tr>
       <th>Calculation</th>
