[Issue #73] Copy-editing use of _Pragma

--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -12,10 +12,7 @@ description: "#pragma declarations are a mark of craftsmanship in Objective-C. A
 
 In this modern context, `#pragma` skirts the line between comment and code. As a preprocessor directive, `#pragma` evaluates at compile-time. But unlike other macros, such as `#ifdef...#endif`, the way `#pragma` is used will not change the runtime behavior of your application. Instead, `#pragma` declarations are used by Xcode to accomplish two primary tasks: organizing code and inhibiting compiler warnings.
 
-In addition to the `#pragma` syntax, both [GCC](http://gcc.gnu.org/onlinedocs/cpp/Pragmas.html) and [Clang](http://clang.llvm.org/docs/UsersManual.html#controlling-diagnostics-via-pragmas) have added the C99 `_Pragma` operator which can then be used in macros like this:
-
-	#define HELLO _Pragma("message \"Hello\"")
-	
+> In addition to the `#pragma` syntax, both [GCC](http://gcc.gnu.org/onlinedocs/cpp/Pragmas.html) and [Clang](http://clang.llvm.org/docs/UsersManual.html#controlling-diagnostics-via-pragmas) have added the C99 `_Pragma` operator.
 
 ## Organizing Your Code
 
@@ -55,7 +52,7 @@ Good habits start with `#pragma mark`. Like so:
 }
 ~~~
 
-Use `#pragma mark` in your `@implementation` to divide code into logical sections. Not only do these sections make it easier to read through the code itself, but it also adds visual cues to the Xcode source navigator (`#pragma mark` declarations starting with a dash (`-`) are preceded with a horizontal divider). 
+Use `#pragma mark` in your `@implementation` to divide code into logical sections. Not only do these sections make it easier to read through the code itself, but it also adds visual cues to the Xcode source navigator (`#pragma mark` declarations starting with a dash (`-`) are preceded with a horizontal divider).
 
 ![Xcode Sections](http://nshipster.s3.amazonaws.com/pragma-xcode-sections.png)
 
@@ -67,7 +64,7 @@ Your code should be clean enough to eat off of. So take the time to leave your `
 
 `#pragma mark` is pretty mainstream. On the other hand, `#pragma` declarations to inhibit warnings from the compiler & static analyzer--now that's pretty fresh.
 
-You know what's even more annoying than poorly-formatted code? Code that generates warnings. Especially 3rd-party code. There are few things as irksome as that one vendor library that takes forever to compile, and finishes with 200+ warnings. Even shipping code with 1 warning is in poor form. 
+You know what's even more annoying than poorly-formatted code? Code that generates warnings. Especially 3rd-party code. There are few things as irksome as that one vendor library that takes forever to compile, and finishes with 200+ warnings. Even shipping code with 1 warning is in poor form.
 
 > Pro tip: Try setting the `-Weverything` flag and checking the "Treat Warnings as Errors" box your build settings. This turns on Hard Mode in Xcode.
 
@@ -87,12 +84,12 @@ This code sample [from AFNetworking](https://github.com/AFNetworking/AFNetworkin
 
 Fortunately, Clang provides a convenient way to get around all of this. Using `#pragma clang diagnostic push/pop`, you can tell the compiler to ignore certain warnings, _only_ for a particular section of code (the original diagnostic settings are restored with the final `pop`).
 
-> You can read more about the LLVM's use of `#pragma` in the [Clang Compiler User's Manual](http://clang.llvm.org/docs/UsersManual.html#diagnostics_pragmas). 
+> You can read more about the LLVM's use of `#pragma` in the [Clang Compiler User's Manual](http://clang.llvm.org/docs/UsersManual.html#diagnostics_pragmas).
 
 Just don't use this as a way to sweep legitimate warnings under the rug--that will only come back to bite you later.
-  
+
 ---
 
-So there you go: two ways you can markedly improve your code using `#pragma` declarations. 
+So there you go: two ways you can markedly improve your code using `#pragma` declarations.
 
 Like the thrift store 8-track player you turned into that lamp in the foyer, `#pragma` remains a curious vestige of the past: Once the secret language of compilers, now re-purposed to better-communicate intent to other programmers. How delightfully vintage!
