Updating iOS 7 article

--- a/2013-09-23-ios7.md
+++ b/2013-09-23-ios7.md
@@ -8,7 +8,7 @@ description: "随着保密协议的解除，我们终于可以开始聊一聊iOS
 
 随着保密协议的解除，我们终于可以开始聊一聊iOS 7里面精彩的新的API了。新的操作系统增加了_非常多_的API,根据Apple在WWDC上的统计，有1500之多。（同意，虽然其中很大一部分可能只是将`id` 变成了`instancetype`，但是不管怎么说，这是个大数目）。
 
-在接下来的几周里，我们将会深入了解iOS 7的很多新增加的功能，但不管我们对这次版本的发布有多兴奋，本周的主题是谈一谈哪些隐藏在平淡光彩下的宝石：`NSData` Base64 编码, `NSURLComponents`, `NSProgress`, `NSProcessInfo` activities, `CIDetectorSmile`, `CIDetectorEyeBlink`, `SSReadingList`, `AVCaptureMetaDataOutput`, `AVSpeechSynthesizer`, 以及 `MKDistanceFormatter`.
+在接下来的几周里，我们将会深入了解iOS 7的很多新增加的功能，但不管我们对这次版本的发布有多兴奋，本周的主题是谈一谈那些隐藏在平淡光彩下的宝石：`NSData` Base64 编码, `NSURLComponents`, `NSProgress`, `NSProcessInfo` activities, `CIDetectorSmile`, `CIDetectorEyeBlink`, `SSReadingList`, `AVCaptureMetaDataOutput`, `AVSpeechSynthesizer`, 以及 `MKDistanceFormatter`.
 
 ---
 
@@ -19,6 +19,7 @@ description: "随着保密协议的解除，我们终于可以开始聊一聊iOS
 很长时间以来，这个重要却无聊的功能完全没有被实现，使得成千上万的开发者不得不从论坛中粘贴复制随机的代码片段。这个疏忽就和iOS5之前的JSON一样突出且恼人。
 
 但这再也不是问题了！iOS7终于加入Base64了：
+
 ~~~{objective-c}
 NSString *string = @"Lorem ipsum dolor sit amet.";
 NSString *base64EncodedString = [[string dataUsingEncoding:NSUTF8StringEncoding] base64EncodedStringWithOptions:0];
@@ -43,7 +44,7 @@ NSLog(@"%@", [components URL]); // @"http://nshipster.com/iOS7?foo=bar"
 
 每一个URL components的property还有一个`percentEncoded*`的演变(比如`user` & `percentEncodedUser`)，通过这个变形就不需要使用其他额外的URI特殊字符百分号编码。
 
-你也许会问，哪些字符是特殊的呢？这取决于你所指的是URL的哪一部分。好消息是`NSCharacterSet`增加了一个新的类别用来在iOS 7里允许使用新的URL字符：
+你也许会问，哪些字符是特殊的呢？这取决于你所指的是URL的哪一部分。好消息是`NSCharacterSet`增加了一个用来在iOS 7里允许使用新的URL字符的新的类别：
 
 - `+ (id)URLUserAllowedCharacterSet`
 - `+ (id)URLPasswordAllowedCharacterSet`
@@ -54,11 +55,11 @@ NSLog(@"%@", [components URL]); // @"http://nshipster.com/iOS7?foo=bar"
 
 ## NSProgress
 
-`NSProgress` 是一个很难描述的类。它的作用既像观察员又像代表／协调员，可以处理报告以及监测的进程。它可以与OS X上的系统级别进程集成，但也可以被插入到面向用户的用户界面。它可以指定处理器来暂停和取消，然后前进到实际进行这项工作的操作上去。
+`NSProgress` 是一个很难描述的类。它的作用既像观察员又像代表／协调员，可以处理报告以及监测的进程。它可以与OS X上的系统级别进程进行集成，但也可以被插入到面向用户的用户界面。它可以指定处理器来暂停和取消，然后前进到实际进行这项工作的操作上去。
 
 任何具有完成的和整体的概念的单位都属于`NSProgress`的候选人，不管它是写入文件的字节，大型渲染工作的帧的数目，或者从服务器上下载的文件。
 
-`NSProgress` 可以被用于通过本地化方式简单的报告整体的进程：
+`NSProgress` 可以被用来通过本地化方式简单的报告整体的进程：
 
 ~~~{objective-c}
 NSProgress *progress = [NSProgress progressWithTotalUnitCount:100];
@@ -67,12 +68,12 @@ progress.completedUnitCount = 42;
 NSLog(@"%@", [progress localizedDescription]); // 42% completed
 ~~~
 
-...or it can be given a handler for stopping work entirely:
+...或者我们可以给它一个完全停止工作的处理器：
 
 ~~~{objective-c}
-NSTimer *timer = [NSTimer timerWithTimeInterval:1.0 
-                                         target:self 
-                                       selector:@selector(incrementCompletedUnitCount:) userInfo:nil 
+NSTimer *timer = [NSTimer timerWithTimeInterval:1.0
+                                         target:self
+                                       selector:@selector(incrementCompletedUnitCount:) userInfo:nil
                                         repeats:YES];
 
 progress.cancellationHandler = ^{
@@ -82,7 +83,7 @@ progress.cancellationHandler = ^{
 [progress cancel];
 ~~~
 
-`NSProgress`在Mac OS X 10.9 Mavericks的使用环境下，会更有意义，但就目前而言，它仍然是一个用于封装工作单位共享模式的有用的类。
+`NSProgress`在Mac OS X 10.9 Mavericks的使用环境下，会更有意义，但就目前而言，它仍然仅仅是一个用于封装工作单位共享模式的有用的类。
 
 ## NSArray -firstObject
 
@@ -96,7 +97,7 @@ NSArray *array = @[@1, @2, @3];
 NSLog(@"First Object: %@", [array firstObject]); // 1
 NSLog(@"Last Object: %@", [array lastObject]); // 3
 ~~~
-	
+
 真让人神清气爽啊！
 
 ## CIDetectorSmile & CIDetectorEyeBlink
@@ -113,8 +114,8 @@ NSLog(@"Last Object: %@", [array lastObject]); // 3
 
 ~~~{objective-c}
 CIDetector *smileDetector = [CIDetector detectorOfType:CIDetectorTypeFace
-                                context:context 
-                                options:@{CIDetectorTracking: @YES, 
+                                context:context
+                                options:@{CIDetectorTracking: @YES,
                                           CIDetectorAccuracy: CIDetectorAccuracyLow}];
 NSArray *features = [smileDetector featuresInImage:image options:@{CIDetectorSmile:@YES}];
 if (([features count] > 0) && (((CIFaceFeature *)features[0]).hasSmile)) {
@@ -173,7 +174,7 @@ didOutputMetadataObjects:(NSArray *)metadataObjects
 }
 ~~~
 
-`AVFoundation`支持你所听到过的任何码（可能还有一些你没听到过的）： 
+`AVFoundation`支持你所听到过的任何码（可能还有一些你没听到过的）：
 
 - `AVMetadataObjectTypeUPCECode`
 - `AVMetadataObjectTypeCode39Code`
@@ -190,7 +191,7 @@ didOutputMetadataObjects:(NSArray *)metadataObjects
 
 ## SSReadingList
 
-虽然阅读以前存储下来内容的人数仅仅比[使用过QR码的人数](http://picturesofpeoplescanningqrcodes.tumblr.com)多一点，但iOS 7增加了Safari服务框架来添加Safari阅读列表的功能是个好事情。
+虽然阅读以前存储下来内容的人数仅仅比[使用过QR码的人数](http://picturesofpeoplescanningqrcodes.tumblr.com)多一点，但iOS 7增加了Safari服务框架功能以添加Safari阅读列表仍然是个好事情。
 
 ~~~{objective-c}
 @import SafariServices;
@@ -200,7 +201,7 @@ didOutputMetadataObjects:(NSArray *)metadataObjects
 NSURL *URL = [NSURL URLWithString:@"http://nshipster.com/ios7"];
 [[SSReadingList defaultReadingList] addReadingListItemWithURL:URL
                                                         title:@"NSHipster"
-                                                  previewText:@"..." 
+                                                  previewText:@"..."
                                                         error:nil];
 ~~~
 
