Fixing typos (/thanks @tgaul)

--- a/2014-01-13-nsrange.md
+++ b/2014-01-13-nsrange.md
@@ -12,7 +12,7 @@ description: "NSRange is one of the essential types of Foundation. Passed around
 
 Ranges are data types used to describe a contiguous interval of integers. They are most commonly used with strings, arrays, and similarly-ordered collections.
 
-For Objective-C programs, the Foundation type `NSRange` used. In other languages, ranges are often encoded as a two-element array, containing the start and end indexes. In Foundation, `NSRange` instead encodes a range as struct containing the location and length. By command-clicking (`⌘-ʘ`) on the `NSRange` symbol in Xcode, we can jump directly to its declaration in `Foundation/NSRange.h`:
+For Objective-C programs, the Foundation type `NSRange` is used. In other languages, ranges are often encoded as a two-element array, containing the start and end indexes. In Foundation, `NSRange` instead encodes a range as struct containing the location and length. By command-clicking (`⌘-ʘ`) on the `NSRange` symbol in Xcode, we can jump directly to its declaration in `Foundation/NSRange.h`:
 
 ~~~{objective-c}
 typedef struct _NSRange {
@@ -84,7 +84,7 @@ NSIndexSet *indexSet = [NSIndexSet indexSetWithIndexesInRange:range];
 
 Because `NSRange` is not a class, creating and using instances is done through function calls, rather than, say, instance methods.
 
-> Many of the NSRange functions are named counter to the modern conventions of Foundation and CoreFoundation wherein the relevant type of the function immediately follows the two-letter namespace. For example, `NSMakeRange` should instead be named `NSRangeMake`, following the example of `NSRectMake` and `CGSizeMake`,  et al. Similarly,  a better name for `NSEqualRanges` would be `NSRangeEqualToRange`, just like `CGPointEqualToPoint`.
+> Many of the NSRange functions are named counter to the modern conventions of Foundation and CoreFoundation wherein the relevant type of the function immediately follows the two-letter namespace. For example, `NSMakeRange` should instead be named `NSRangeMake`, following the example of `CGRectMake` and `CGSizeMake`,  et al. Similarly,  a better name for `NSEqualRanges` would be `NSRangeEqualToRange`, just like `CGPointEqualToPoint`.
 >
 > Although consistency in itself is likely not sufficient reason to go through the trouble of replacing existing usage, [this gist](https://gist.github.com/mattt/8402537) shows how one could make their own code base a little more OCD-friendly.
 
@@ -229,7 +229,7 @@ if ([mutableAttributedString attribute:NSUnderlineStyleAttributeName
 
 ## CFRange
 
-One final caveat: Core Foundation also defines a `CFRange` type, which differs from `NSRange` in using `CFIndex` types for its members, and having on the function `CFRangeMake`:
+One final caveat: Core Foundation also defines a `CFRange` type, which differs from `NSRange` in using `CFIndex` types for its members, and having only the function `CFRangeMake`:
 
 ~~~{objective-c}
 typedef struct {
