Adding translator information

--- a/2012-10-01-pragma.md
+++ b/2012-10-01-pragma.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: "#pragma"
+translator: "Zihan Xu"
 ref: "https://developer.apple.com/library/mac/#documentation/DeveloperTools/gcc-4.0.1/gcc/Pragmas.html#Pragmas"
 framework: Objective-C
 rating: 8.0
