--- a/2013-01-07-nil.md
+++ b/2013-01-07-nil.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "nil / Nil / NULL / NSNull"
-
+translator: "Zihan Xu"
 ref: "https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/NumbersandValues/Articles/Null.html"
 framework: Objective-C
 published: true
@@ -9,7 +9,7 @@ published: true
 
 理解“不存在”的概念不仅仅是一个哲学的问题，也是一个实际的问题。我们是_有形_宇宙的居民，而原因在于逻辑宇宙的存在不确定性。作为一个逻辑系统的物理体现，电脑面临一个棘手的问题，就是如何用_存在_表达_不存在_.
 
-在Objective－C中，有几个不同种类的_不存在_。这样做的原因要追溯到[一个频繁提及的NSHipster](http://nshipster.com/ns_enum-ns_options/)，讲解Objective-C如何在C的程序范例以及由Smalltalk启发的面向对象的范例中架起桥梁的。 
+在Objective－C中，有几个不同种类的_不存在_。这样做的原因要追溯到[一个频繁提及的NSHipster](http://nshipster.com/ns_enum-ns_options/)，讲解Objective-C如何在C的程序范例以及由Smalltalk启发的面向对象的范例中架起桥梁的。
 
 C用`0`来作为_不存在_的原始值，而`NULL`作为指针([这在指针环境中相当于`0`](http://c-faq.com/null/nullor0.html))。
 
