--- a/2013-04-08-bool.md
+++ b/2013-04-08-bool.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "BOOL / bool / Boolean / NSCFBoolean"
-
+translator: "Zihan Xu"
 ref: "https://developer.apple.com/library/mac/#documentation/CoreFoundation/Reference/CFBooleanRef/Reference/reference.html"
 framework: Objective-C
 published: true
@@ -17,7 +17,7 @@ description: "再一次，将我们有逻辑的世界编码为冰冷的电脑计
 
 ---
 
-Objective-C用`BOOL`来编码真值。它是`signed char`的`typedef`，并且用宏`YES`和`NO`来相应的表示真和假。 
+Objective-C用`BOOL`来编码真值。它是`signed char`的`typedef`，并且用宏`YES`和`NO`来相应的表示真和假。
 
 布尔值用于条件判断，比如`if`和`while`语句，来进行有条件的逻辑或者重复运行。当判断一个条件语句，数值`0`为“假”，而其他任何数值为“真”。因为`NULL`和`nil`被定义为`0`，所以对于这些不存在的数值的条件语句也被判定为“假”。
 
